<resources>
    <string name="app_name">网上书店</string>
    <string name="search_product">搜索商品</string>
    <string name="no_login_hint">你好。登录</string>
    <string name="home">首页</string>
    <string name="my_order">我的订单</string>
    <string name="my_account">我的账户</string>
    <string name="setting">设置</string>
    <string name="customer_service">客户服务</string>
    <string name="login">登录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="account_hint">请输入手机号码</string>
    <string name="pass_hint">密码</string>
    <string name="show_pass">显示密码</string>
    <string name="new_account">新的用户？</string>
    <string name="create_new_account">创建新账户</string>
    <string name="create_account">创建账户</string>
    <string name="name">名称</string>
    <string name="your_phone">您的手机号</string>
    <string name="create_password">创建密码</string>
    <string name="login_now">立即登录</string>
    <string name="has_account">已拥有账户？</string>
    <string name="sms_account">验证账户身份</string>
    <string name="put_sms">请输入验证码</string>
    <string name="send_sms">发送验证码</string>
    <string name="go_on">继续</string>
    <string name="sms_hint">为了您的安全，我们将对你填写的电话号进行短信验证，请输入验证码进行验证。</string>
    <string name="pass_help">密码帮助</string>
    <string name="reset_hint">您在每次登录时，都需要提供此密码。</string>
    <string name="new_pass_hint">请输入新密码</string>
    <string name="new_pass_hint_again">重新输入新密码</string>
    <string name="save_change">保存更改</string>
    <string name="security_pass_hint">安全密码提示</string>
    <string name="security_pass_hint_one">至少包含8个字符，最好是数字和字母的组合。</string>
    <string name="security_pass_hint_two">不要使用您之前已经在本网站上使用过的密码。</string>
    <string name="security_pass_hint_three">不要使用字典词汇、您的姓名、邮箱地址、手机号码或者其他可以轻易获得的个人信息。</string>
    <string name="security_pass_hint_four">不要对多个在线账户使用同一个密码。</string>
    <string name="book_name">教育信息处理（第二版）</string>
    <string name="RMB">￥</string>
    <string name="price">售价:</string>
    <string name="send_to">配送至:</string>
    <string name="default_address">默认收货地址</string>
    <string name="buy_now">现在购买</string>
    <string name="add_cart">加入购物车</string>
    <string name="book_info">商品信息</string>
    <string name="description">描述</string>
    <string name="base_info"><![CDATA[商品特点&基本信息]]></string>
    <string name="publish">出版社:</string>
    <string name="publish_date">出版日期:</string>
    <string name="language">语言:</string>
    <string name="package_size">包装尺寸:</string>
    <string name="weight">发货重量:</string>
    <string name="rank">销售排行榜:</string>
    <string name="author">作者:</string>
    <string name="total">小计：</string>
    <string name="cart_price">¥ 00.0</string>
    <string name="to_settlement">去结算</string>
    <string name="delete">删除</string>
    <string name="select_address">请选择配送地址</string>
    <string name="to_pay">去支付</string>
    <string name="edit">编辑</string>
    <string name="no_data">-.-</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="jd_pay">京东</string>
    <string name="invoice_type">发票类型:</string>
    <string name="invoice_title">发票抬头:</string>
    <string name="deliver_fee">邮费5元</string>
    <string name="ensure_pay">确认支付</string>
    <string name="choose_pay">请选择支付方式</string>
    <string name="pay_success">下单成功</string>
    <string name="to_check">去查看</string>
    <string name="shop_book">购物书店</string>
    <string name="not_pay">未支付</string>
    <string name="order_num">订单号：</string>
    <string name="check_detail">查看详情</string>
    <string name="order_date">订单日期：</string>
    <string name="order_price">订单价格：</string>
    <string name="order_status">订单状态：</string>
    <string name="order_detail">订单详情</string>
    <string name="book_detail">货物详情</string>
    <string name="amount">数量:</string>
    <string name="pay_type">支付方式:</string>
    <string name="uInvoiceTitle">发票抬头</string>
    <string name="add_address">添加地址</string>
    <string name="city">请输入城市</string>
    <string name="township">请输入区县</string>
    <string name="street">请输入街道</string>
    <string name="zip_code">请输入邮编</string>
    <string name="tNumber">门牌号</string>
    <string name="remark">详细地址</string>
    <string name="save">保存</string>
    <string name="real_name">真实姓名</string>
    <string name="my_address">收货地址</string>
    <string name="account_info">账户信息</string>
    <string name="account_num">账户号</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="exit_login">退出登录</string>
    <string name="edit_user">信息修改</string>
    <string name="name_hint">请输入真实姓名</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="QQ_num">QQ号</string>
    <string name="login_success">登录成功</string>
</resources>
