<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/logo_title"/>
    <TextView
        android:textColor="@color/colorDark"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:text="@string/sms_account"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <TextView
        android:textColor="@color/colorDark"
        android:layout_margin="16dp"
        android:text="@string/sms_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/u_phone"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="16dp"
        android:hint="@string/account_hint"
        android:background="@drawable/new_account_shap"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sms"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/put_sms"
            android:background="@drawable/new_account_shap"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
        <Button
            android:id="@+id/send_sms"
            android:text="@string/send_sms"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="18dp"
            android:background="@drawable/login_shap"
            android:layout_width="144dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_go_on"
        android:layout_marginTop="88dp"
        android:text="@string/go_on"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18dp"
        android:background="@drawable/login_shap"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

</LinearLayout>