<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    tools:context="amazon.jy.com.amazon.ui.AddressActivity">
    <include layout="@layout/logo_title" />
    <TextView
        android:id="@+id/a_id"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorDark"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/add_address"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <Spinner
        android:id="@+id/country"
        android:background="@drawable/shap"
        android:layout_marginTop="8dp"
        android:entries="@array/country"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <Spinner
        android:id="@+id/province"
        android:background="@drawable/shap"
        android:layout_marginTop="8dp"
        android:entries="@array/province"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/township"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/shap"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/township"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <EditText
        android:id="@+id/street"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/shap"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/street"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <EditText
        android:id="@+id/zip_code"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/shap"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/zip_code"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <EditText
        android:id="@+id/t_number"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/shap"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/tNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <EditText
        android:id="@+id/remark"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/shap"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/remark"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:background="@drawable/login_shap"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
</LinearLayout>
