<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/logo_title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDeepGrey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">
        <TextView
            android:layout_weight="1"
            android:text="@string/login"
            android:textSize="26dp"
            android:textColor="@color/colorDark"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_forget_pass"
            android:gravity="center"
            android:text="@string/forget_pass"
            android:textColor="@color/colorPrimary"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:focusable="false"
        android:background="@drawable/shap"
        android:focusableInTouchMode="true"
        android:layout_height="98dp">

        <EditText
            android:id="@+id/mobile"
            android:paddingLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/edit_account"
            android:hint="@string/account_hint"
            android:textCursorDrawable="@color/colorDark"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDeepGrey"/>
        <EditText
            android:id="@+id/password"
            android:paddingLeft="16dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:textCursorDrawable="@color/colorDark"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/pass_hint"
            android:background="@drawable/edit_password" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="64dp">
        <CheckBox
            android:id="@+id/show_pass"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:background="@drawable/edit_password"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="8dp"
            android:textSize="18dp"
            android:text="@string/show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="18dp"
        android:background="@drawable/login_shap"
        android:layout_width="match_parent"
        android:layout_height="46dp" />
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <View
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/colorDeepGrey"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/colorDeepGrey"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_create"
        android:text="@string/create_new_account"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18dp"
        android:background="@drawable/shap"
        android:layout_width="match_parent"
        android:layout_height="46dp" />

</LinearLayout>